--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -164,7 +164,7 @@
                     <ul class="metismenu" id="side-menu">
                         <li class="menu-title">Menu</li>
                         <li>
-                            <a href="index.html" class="waves-effect">
+                            <a href="/" class="waves-effect">
                                 <i class="icon-accelerator"></i><span class="badge badge-success badge-pill float-right">9+</span> <span> Dashboard </span>
                             </a>
                         </li>
@@ -172,9 +172,9 @@
                         <li>
                             <a href="#" class="waves-effect"><i class="icon-calendar"></i><span> Manage products <span class="float-right menu-arrow"><i class="mdi mdi-chevron-right"></i></span> </span></a>
                             <ul class="submenu">
-                                <li><a href="manage-pizza.html">Pizaa</a></li>
-                                <li><a href="manage-drinks.html">Thức uống</a></li>
-                                <li><a href="manage-sides.html">Món ăn kèm</a></li>
+                                <li><a href="manage-pizza">Pizaa</a></li>
+                                <li><a href="manage-drinks">Thức uống</a></li>
+                                <li><a href="manage-sides">Món ăn kèm</a></li>
                             </ul>
                         </li>
                     </ul>
