--- a/views/pizza/manage.hbs
+++ b/views/pizza/manage.hbs
@@ -20,8 +20,6 @@
                         </div>
                         <!-- end page-title -->
 
-                
-        
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="card m-b-30">
@@ -40,7 +38,7 @@
                                             <div class="col-lg-8">
                                                 <div class="btn-toolbar float-lg-right form-group mb-0" role="toolbar">
                                                     <div class="">
-                                                        <a href="add-pizza.html" class="btn btn-info waves-effect waves-light  m-r-5" role="button"><i class="fas fa-plus"></i> <i></i> <span>Add Pizza</span> </a>
+                                                        <a href="/manage-pizza/add" class="btn btn-info waves-effect waves-light  m-r-5" role="button"><i class="fas fa-plus"></i> <i></i> <span>Add Pizza</span> </a>
                                                         <button type="button" class="btn btn-dark waves-light waves-effect"><i class="far fa-trash-alt"></i> <i></i><span>Delete Selection</span> </button>
                                                     </div>
                                                 </div>
@@ -62,39 +60,24 @@
                                                     </tr>
                                                 </thead>
                                                 <tbody>
+                                                    {{#each pizza}}
                                                     <tr>
-                                                        <th scope="row">1</th>
-                                                        <td>Pizza xxxx</td>
-                                                        <td>Pizza</td>
-                                                        <td>9000000</td>
-                                                        <td>Thập cẩm</td>
+                                                         <th scope="row">{{_id}}</th>
+                                                        <td>{{name}}</td>
+                                                        <td>{{category}}</td>
+                                                        <td>{{price}}</td>
+                                                        <td>{{pizza-kind}}</td>
                                                         <td><span class="badge badge-info">Normal</span></td>
                                                         <td>
                                                             <div class="btn-toolbar form-group mb-0">
                                                                 <div class="">
-                                                                    <a href="update-pizza.html" role="button" class="btn btn-success waves-effect waves-light m-r-5"><i class="far fa-edit"></i></a>
+                                                                    <a href="/manage-pizza/update" role="button" class="btn btn-success waves-effect waves-light m-r-5"><i class="far fa-edit"></i></a>
                                                                     <button type="button" class="btn btn-danger waves-effect waves-light m-r-5" data-toggle="modal" data-target="#alertDeleteModal"><i class="far fa-trash-alt"></i></button>
                                                                 </div>
                                                             </div>
                                                         </td>
                                                     </tr>
-                                                    
-                                                    <tr>
-                                                        <th scope="row">1</th>
-                                                        <td>Pepsi xxxx</td>
-                                                        <td>Thức uống</td>
-                                                        <td>20000</td>
-                                                        <td>#</td>
-                                                        <td><span class="badge badge-danger">Out of stock</span></td>
-                                                        <td>
-                                                            <div class="btn-toolbar form-group mb-0">
-                                                                <div class="">
-                                                                    <a href="update-pizza.html" role="button" class="btn btn-success waves-effect waves-light m-r-5"><i class="far fa-edit"></i></a>
-                                                                    <button type="button" class="btn btn-danger waves-effect waves-light m-r-5" data-toggle="modal" data-target="#alertDeleteModal"><i class="far fa-trash-alt"></i></button>
-                                                                </div>
-                                                            </div>
-                                                        </td>
-                                                    </tr>
+                                                    {{/each}}
                                                 </tbody>
                                             </table>
 
