update update pizza

--- a/views/drinks/manage.hbs
+++ b/views/drinks/manage.hbs
@@ -60,7 +60,7 @@
                                                 <tbody>
                                                     {{#each drinks}}
                                                     <tr>
-                                                        <th scope="row">{{_id}}</th>
+                                                        <th scope="row">{{index @index}}</th>
                                                         <td>{{name}}</td>
                                                         <td>{{category}}</td>
                                                         <td>{{price}}</td>
