--- a/views/pizza/manage.hbs
+++ b/views/pizza/manage.hbs
@@ -62,16 +62,16 @@
                                                 <tbody>
                                                     {{#each pizza}}
                                                     <tr>
-                                                         <th scope="row">{{_id}}</th>
+                                                        <th scope="row">{{index @index}}</th>
                                                         <td>{{name}}</td>
                                                         <td>{{category}}</td>
                                                         <td>{{price}}</td>
-                                                        <td>{{pizza-kind}}</td>
+                                                        <td>{{kind}}</td>
                                                         <td><span class="badge badge-info">Normal</span></td>
                                                         <td>
                                                             <div class="btn-toolbar form-group mb-0">
                                                                 <div class="">
-                                                                    <a href="/manage-pizza/update" role="button" class="btn btn-success waves-effect waves-light m-r-5"><i class="far fa-edit"></i></a>
+                                                                    <a href="/manage-pizza/update/{{_id}}" role="button" class="btn btn-success waves-effect waves-light m-r-5"><i class="far fa-edit"></i></a>
                                                                     <button type="button" class="btn btn-danger waves-effect waves-light m-r-5" data-toggle="modal" data-target="#alertDeleteModal"><i class="far fa-trash-alt"></i></button>
                                                                 </div>
                                                             </div>
@@ -92,7 +92,7 @@
                                                             </button>
                                                         </div>
                                                         <div class="modal-body">
-                                                            <h5 class="font-16">Bạn có chắc chắn muốn xóa sản phẩm xxx không?</h5>
+                                                            <h5 class="font-16">Bạn có chắc chắn muốn xóa sản phẩm {{name}} không?</h5>
                                                             <p></p>
                                                         </div>
                                                         <div class="modal-footer">
@@ -106,20 +106,15 @@
                                     </div>
                                 </div>
                             </div> <!-- end col -->
-        
-                          
                         </div> 
-
                     </div>
                     <!-- container-fluid -->
-
                 </div>
                 <!-- content -->
 
                 <footer class="footer">
                     © 2019 Stexo <span class="d-none d-sm-inline-block"> - Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesdesign</span>.
                 </footer>
-
             </div>
             <!-- ============================================================== -->
             <!-- End Right content here -->
