--- a/views/sides/manage.hbs
+++ b/views/sides/manage.hbs
@@ -61,7 +61,7 @@
                                                 <tbody>
                                                    {{#each sides}}
                                                     <tr>
-                                                        <th scope="row">{{_id}}</th>
+                                                        <th scope="row">{{index @index}}</th>
                                                         <td>{{name}}</td>
                                                         <td>{{category}}</td>
                                                         <td>{{price}}</td>
