--- a/views/pizza/manage.hbs
+++ b/views/pizza/manage.hbs
@@ -61,7 +61,6 @@
                                     </thead>
                                     <tbody>
                                         {{#each pizza}}
-                                        <input type="hidden" name="id_{{index @index}}" id="id_{{index @index}}" value="{{_id}}"/>
                                         <tr>
                                             <th scope="row">{{index @index}}</th>
                                             <td>{{name}}</td>
@@ -73,7 +72,9 @@
                                                 <div class="btn-toolbar form-group mb-0">
                                                     <div class="">
                                                         <a href="/manage-pizza/update/{{_id}}" role="button" class="btn btn-success waves-effect waves-light m-r-5"><i class="far fa-edit"></i></a>
-                                                        <button type="button" class="btn btn-danger waves-effect waves-light m-r-5" data-toggle="modal" data-target="#alertDeleteModal"><i class="far fa-trash-alt"></i></button>
+                                                        <button type="button" class="btn btn-danger waves-effect waves-light m-r-5" data-toggle="modal" data-target="#alertDeleteModal" onclick="getID('{{_id}}')">
+                                                            <i class="far fa-trash-alt"></i>
+                                                        </button>
                                                     </div>
                                                 </div>
                                             </td>
@@ -98,7 +99,9 @@
                                             </div>
                                             <div class="modal-footer">
                                                 <button class="btn btn-secondary waves-effect" data-dismiss="modal">Cancel</button>
-                                                <button class="btn btn-primary waves-effect waves-light" onclick="delete()">Delete</button>
+                                                <button class="btn btn-primary waves-effect waves-light" onclick="confirmDelete()">
+                                                    Delete
+                                                </button>
                                             </div>
                                         </div><!-- /.modal-content -->
                                     </div><!-- /.modal-dialog -->
@@ -122,7 +125,29 @@
 <!-- ============================================================== -->
 
 <script>
-    function delete() {
-        console.log("cc")
+    function getID(id) {
+        let inputID = document.createElement("input")
+        inputID.id = "id"
+        inputID.name = "id"
+        inputID.value = id
+
+        document.body.appendChild(inputID);
     }
+
+    function confirmDelete() {
+        const form = document.createElement("form");
+        form.method = "POST";
+        form.action = "/manage-pizza";
+
+        const inputID = document.getElementById('id')
+
+        console.log(inputID.value)
+
+        form.appendChild(inputID);
+
+        document.body.appendChild(form);
+
+        form.submit()
+    }
+
 </script>
