--- a/views/pizza/add.hbs
+++ b/views/pizza/add.hbs
@@ -150,9 +150,12 @@
                                         <button type="submit" class="btn btn-primary waves-effect waves-light" onclick="sendInfo()">
                                             Thêm
                                         </button>
-                                        <button type="reset" class="btn btn-secondary waves-effect m-l-5">
-                                            Bỏ qua
-                                        </button>
+
+                                        <a href="/manage-pizza">
+                                            <button type="reset" class="btn btn-secondary waves-effect m-l-5">
+                                                Bỏ qua
+                                            </button>
+                                        </a>
                                     </div>
                                 </div>
       
