--- a/views/drinks/manage.hbs
+++ b/views/drinks/manage.hbs
@@ -68,8 +68,10 @@
                                                         <td>
                                                             <div class="btn-toolbar form-group mb-0">
                                                                 <div class="">
-                                                                    <a href="/manage-drinks/update" role="button" class="btn btn-success waves-effect waves-light m-r-5"><i class="far fa-edit"></i></a>
-                                                                    <button type="button" class="btn btn-danger waves-effect waves-light m-r-5" data-toggle="modal" data-target="#alertDeleteModal"><i class="far fa-trash-alt"></i></button>
+                                                                    <a href="/manage-drinks/update/{{_id}}" role="button" class="btn btn-success waves-effect waves-light m-r-5"><i class="far fa-edit"></i></a>
+                                                                    <button type="button" class="btn btn-danger waves-effect waves-light m-r-5" data-toggle="modal" data-target="#alertDeleteModal" onclick="getID('{{_id}}')">
+                                                                        <i class="far fa-trash-alt"></i>
+                                                                    </button>
                                                                 </div>
                                                             </div>
                                                         </td>
@@ -94,7 +96,9 @@
                                                         </div>
                                                         <div class="modal-footer">
                                                             <button type="button" class="btn btn-secondary waves-effect" data-dismiss="modal">Cancel</button>
-                                                            <button type="button" class="btn btn-primary waves-effect waves-light">Delete</button>
+                                                            <button type="button" class="btn btn-primary waves-effect waves-light" onclick="confirmDelete()">
+                                                                Delete
+                                                            </button>
                                                         </div>
                                                     </div><!-- /.modal-content -->
                                                 </div><!-- /.modal-dialog -->
@@ -121,3 +125,30 @@
             <!-- ============================================================== -->
             <!-- End Right content here -->
             <!-- ============================================================== -->
+
+<script>
+    function getID(id) {
+        let inputID = document.createElement("input")
+        inputID.id = "id"
+        inputID.name = "id"
+        inputID.value = id
+
+        document.body.appendChild(inputID);
+    }
+
+    function confirmDelete() {
+        const form = document.createElement("form");
+        form.method = "POST";
+        form.action = "/manage-drinks";
+
+        const inputID = document.getElementById('id')
+
+        console.log(inputID.value)
+
+        form.appendChild(inputID);
+
+        document.body.appendChild(form);
+
+        form.submit()
+    }
+</script>
