--- a/views/sides/add.hbs
+++ b/views/sides/add.hbs
@@ -1,102 +1,146 @@
- <div class="content-page">
-                <!-- Start content -->
-                <div class="content">
-                    <div class="container-fluid">
-                        <div class="page-title-box">
-                            <div class="row align-items-center">
-                                <div class="col-sm-6">
-                                    <h4 class="page-title">Add product</h4>
+<div class="content-page">
+    <!-- Start content -->
+    <div class="content">
+        <div class="container-fluid">
+            <div class="page-title-box">
+                <div class="row align-items-center">
+                    <div class="col-sm-6">
+                        <h4 class="page-title">Add product</h4>
+                    </div>
+                    <div class="col-sm-6">
+                        <ol class="breadcrumb float-right">
+                            <li class="breadcrumb-item"><a href="javascript:void(0);">Stexo</a></li>
+                            <li class="breadcrumb-item"><a href="javascript:void(0);">Manage products</a></li>
+                            <li class="breadcrumb-item active">Add products</li>
+                        </ol>
+                    </div>
+                </div> <!-- end row -->
+            </div>
+            <!-- end page-title -->
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="card m-b-30">
+                        <div class="card-body">
+
+                        <h4 class="mt-0 header-title">Điền đầy đủ thông tin của sản phẩm cần thêm</h4>
+                        </p>
+
+                        <!-- Form -->
+                                <div class="form-group">
+                                    <label>Tên</label>
+                                    <input type="text" class="form-control" required placeholder="Tên sản phẩm" name="name" id="name"/>
                                 </div>
-                                <div class="col-sm-6">
-                                    <ol class="breadcrumb float-right">
-                                        <li class="breadcrumb-item"><a href="javascript:void(0);">Stexo</a></li>
-                                        <li class="breadcrumb-item"><a href="javascript:void(0);">Manage products</a></li>
-                                        <li class="breadcrumb-item active">Add products</li>
-                                    </ol>
-                                </div>
-                            </div> <!-- end row -->
-                        </div>
-                        <!-- end page-title -->
 
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <div class="card m-b-30">
-                                    <div class="card-body">
-        
-                                    <h4 class="mt-0 header-title">Điền đầy đủ thông tin của sản phẩm cần thêm</h4>
-                                    </p>
-        
-                                    <!-- Form -->
-                                        <form class="" action="#">
-                                            <div class="form-group">
-                                                <label>Tên</label>
-                                                <input type="text" class="form-control" required placeholder="Tên sản phẩm"/>
-                                            </div>
-
-                                            <div class="form-group col-sm-2 img-picker-container"> 
-                                                <label>Ảnh đại diện</label>
-                                                <div class="img-picker"></div>
-                                            </div> 
+                                <div class="form-group col-sm-2 img-picker-container"> 
+                                    <label>Ảnh đại diện</label>
+                                    <div class="img-picker"></div>
+                                </div> 
 
 
-                                            <div class="form-group">
-                                                <label>Mô tả</label>
-                                                <div>
-                                                    <textarea required class="form-control" rows="5" required placeholder="Mô tả sản phẩm"></textarea>
-                                                </div>
-                                            </div>
-
-                                            <div class="form-group img-picker-container"> 
-                                                <label>Ảnh mô tả</label>
-                                                <div class="row">
-                                                <div class="img-picker col-sm-2"></div>
-                                                <div class="img-picker col-sm-2"></div>
-                                                <div class="img-picker col-sm-2"></div>
-                                                <div class="img-picker col-sm-2"></div>
-                                            </div>
-                                            </div> 
-
-                                            <div class="form-group">
-                                                <label>Giá tiền</label>
-                                                <div class="input-group">
-                                                    <input data-parsley-type="number" type="text"
-                                                           class="form-control" required
-                                                           placeholder="Giá tiền sản phẩm"/>
-
-                                                    <div class="input-group-append">
-                                                        <span class="input-group-text">VNĐ</span>
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                            <div class="form-group">
-                                                <div>
-                                                    <button type="submit" class="btn btn-primary waves-effect waves-light">
-                                                        Thêm
-                                                    </button>
-                                                    <button type="reset" class="btn btn-secondary waves-effect m-l-5">
-                                                        Bỏ qua
-                                                    </button>
-                                                </div>
-                                            </div>
-                                        </form>
-        
+                                <div class="form-group">
+                                    <label>Mô tả</label>
+                                    <div>
+                                        <textarea required class="form-control" rows="5" required placeholder="Mô tả sản phẩm" name="description" id="description"></textarea>
                                     </div>
                                 </div>
-                            </div> <!-- end col -->
-        
 
-                            
-                        </div> <!-- end row -->      
+                                <div class="form-group img-picker-container"> 
+                                    <label>Ảnh mô tả</label>
+                                    <div class="row">
+                                    <div class="img-picker col-sm-2"></div>
+                                    <div class="img-picker col-sm-2"></div>
+                                    <div class="img-picker col-sm-2"></div>
+                                    <div class="img-picker col-sm-2"></div>
+                                </div>
+                                </div> 
 
-                        
+                                <div class="form-group">
+                                    <label>Giá tiền</label>
+                                    <div class="input-group">
+                                        <input data-parsley-type="number" type="text"
+                                                class="form-control" required
+                                                placeholder="Giá tiền sản phẩm"
+                                                name="price"
+                                                id="price"/>
+
+                                        <div class="input-group-append">
+                                            <span class="input-group-text">VNĐ</span>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+                                    <div>
+                                        <button class="btn btn-primary waves-effect waves-light" onclick="sendInfo()">
+                                            Thêm
+                                        </button>
+                                         <a href="/manage-sides">
+                                        <button type="reset" class="btn btn-secondary waves-effect m-l-5">
+                                            Bỏ qua
+                                        </button>
+                                        </a>
+                                    </div>
+                                </div>
+                        </div>
                     </div>
-                    <!-- container-fluid -->
+                </div> <!-- end col -->
+            </div> <!-- end row -->      
+        </div>
+        <!-- container-fluid -->
+    </div>
+    <!-- content -->
+    <footer class="footer">
+        © 2019 Stexo <span class="d-none d-sm-inline-block"> - Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesdesign</span>.
+    </footer>
+</div>
 
-                </div>
-                <!-- content -->
-                <footer class="footer">
-                    © 2019 Stexo <span class="d-none d-sm-inline-block"> - Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesdesign</span>.
-                </footer>
+<script>
+    function sendInfo()
+    {
+        const name = document.getElementById("name");
 
-            </div>
+        if (name.value.length == 0) {
+            alert("Vui Lòng Không Bỏ Trống Tên Sản Phẩm")
+            return false
+        }
+
+        const description = document.getElementById("description");
+
+        if (description.value.length == 0) {
+            alert("Vui Lòng Không Bỏ Trống Mô Tả Sản Phẩm")
+            return false
+        }
+
+        const price = document.getElementById("price");
+
+        if (price.value.length == 0) {
+            alert("Vui Lòng Không Bỏ Trống Giá Sản Phẩm")
+            return false
+        }
+
+        const form = document.createElement("form");
+        form.method = "POST";
+        form.action = "/manage-sides/add";
+
+        const inputName = document.createElement("input");
+        inputName.name = "name";
+        inputName.value = name.value;
+        form.appendChild(inputName);
+
+        const inputDescription = document.createElement("input");
+        inputDescription.name = "description";
+        inputDescription.value = description.value;
+        form.appendChild(inputDescription);
+
+        const inputPrice = document.createElement("input");
+        inputPrice.name = "price";
+        inputPrice.value = price.value;
+        form.appendChild(inputPrice);
+
+        document.body.appendChild(form);
+
+        form.submit();
+    }
+</script>
+
