--- a/views/drinks/manage.hbs
+++ b/views/drinks/manage.hbs
@@ -91,7 +91,7 @@
                                                             </button>
                                                         </div>
                                                         <div class="modal-body">
-                                                            <h5 class="font-16">Bạn có chắc chắn muốn xóa sản phẩm xxx không?</h5>
+                                                            <h5 class="font-16">Bạn có chắc chắn muốn xóa sản phẩm này không?</h5>
                                                             <p></p>
                                                         </div>
                                                         <div class="modal-footer">
