--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -204,7 +204,7 @@
     <script src="/assets/js/waves.min.js"></script>
 
     <!-- Image picker -->
-    {{!-- <script src="/assets/js/imgpicker.js"></script> --}}
+    <script src="/assets/js/imgpicker.js"></script>
 
     <!-- Parsley js -->
     <script src="../plugins/parsleyjs/parsley.min.js"></script>
